# spin-component-deps

./: Cargo.toml  spin.toml
add/: Cargo.toml
add/src/: bindings.rs  lib.rs
add/wit/: world.wit
src/: bindings.rs  lib.rs
wit/: world.wit
